# bigdag

./: .gitignore  README.md  run_tests.sh  setup.cfg
bigdag/: __init__.py  auto_deps.py  bigquery_runner.py  cli.py  dag.py  utils.py
tests/: test_auto_deps.py  test_bigquery_runner.py  test_dag.py
tests/dag1/: deps.yaml
tests/dag1/financial/raw/: sales.sheet.def.json
tests/dag1/financial/refined/: monthly_sales.table.sql
tests/dag1/financial/trusted/: sales.view.sql
tests/dag2/: deps.yaml
tests/dag2/raw/logistics/regional/: stock.sheet.def.json  stock.sheet.schema.json
tests/dag2/refined/logistics/regional/: product_table1.table.sql  product_table2.table.sql
tests/dag2/trusted/logistics/regional/: stock_view1.view.sql  stock_view2.view.sql
