[metadata]
name = bigdag
version = 0.1.0
description = BigQuery DAG Engine
author = Fernando Ultremare
author_email = fer@gmail.com
classifiers =
    Programming Language :: Python :: 3.9+
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
include_package_data = false
install_requires =
    pyyaml>=6.0.2,<7.0.0
    networkx>=3.4.2,<4.0.0
    click>=8.0.1,<9.0.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    bigdag=bigdag.cli:cli